added general layout with grid, sections with buttons and text area have flex display inside them

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   <title>Document</title>
 </head>
 <body>
-
+    <div class = "container">
+        <div class = "createbudget">
+            <h1>Budget App</h1>
+            <textarea class="textbox" id="budgettextarea" rows="1" cols="10">Enter budget here</textarea>
+            <button class="createbudgetbutton">Create Budget</button>
+        </div>
+        <div class = "expense">
+            <textarea class="textbox" id="itemtextarea" rows="1" cols="10">Expense item</textarea>
+            <textarea class = "textbox" id="expensetextarea" rows="1" cols="20">Expense amount</textarea>
+            <button class="addexpensebutton">Add expense amount</button>
+        </div>
+        <div class="calculationarea">
+        </div>
+    </div>
 </body>
 </html>
